[gd_scene load_steps=7 format=2]

[ext_resource path="res://nholes/clock_line.png" type="Texture" id=1]
[ext_resource path="res://RotatingTeleporter/RotatingTeleporter.gd" type="Script" id=2]
[ext_resource path="res://nholes/nhole2.tscn" type="PackedScene" id=3]
[ext_resource path="res://LabelShowTrigger/LabelShowTrigger.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/476440__cguerra1909__black-hole.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 5.60928

[node name="RotatingTeleporter" type="Node2D"]
script = ExtResource( 2 )

[node name="Node2D" parent="." instance=ExtResource( 3 )]
position = Vector2( -1, 3 )
scale = Vector2( 1, 1 )

[node name="TeleportingBody" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TeleportingBody"]
scale = Vector2( 20.68, 20.68 )
shape = SubResource( 1 )

[node name="RotatingPart" type="Node2D" parent="."]
position = Vector2( 1, -1 )

[node name="Sprite" type="Sprite" parent="RotatingPart"]
position = Vector2( 47, -223 )
rotation = -1.10113
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="LabelShowTrigger" parent="." instance=ExtResource( 4 )]
scale = Vector2( 2.05262, 1.59927 )
text = "The
Clock"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="body_entered" from="TeleportingBody" to="." method="_on_TeleportingBody_body_entered"]
